Page MenuHome GnuPG

GpgME++: Treat GPG_ERR_FULLY_CANCELED as GPG_ERR_CANCELED in GpgME::Error
Closed, ResolvedPublic

Description

Under certain circumstances (e.g. if a user of pinentry GTK closes a passphrase dialog with the close button) the backend returns with GPG_ERR_FULLY_CANCELED. Unsuspecting users of GpgME::Error will treat this error and show ugly error messages because GpgME::Error only handles GPG_ERR_CANCELED specially.

From the user perspective GPG_ERR_FULLY_CANCELED and GPG_ERR_CANCELED which are both a result of the user canceling an operation both error codes should be treated identical. Hence, GpgME::Error should treat them identical so that users of GpgME do not need to handle GPG_ERR_FULLY_CANCELED manually. If required, users can still check the actual error code.

Event Timeline

ikloecker triaged this task as Normal priority.
ikloecker created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Fixed.